foo-testpage.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: testpage
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: testpage-deployment
  namespace: testpage
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.19.0-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /usr/share/nginx/html
              readOnly: true
              name: html
      volumes:
        - name: html
          configMap:
            name: testpage-data
---
kind: Service
apiVersion: v1
metadata:
  name: testpage-service
  namespace: testpage
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: testpage-ingress
  namespace: testpage
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: foo.rappet.xyz
      http:
        paths:
          - backend:
              serviceName: testpage-service
              servicePort: 80
  tls:
    - hosts:
        - foo.rappet.xyz
      secretName: testpage-ingress-cert
