gitea.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: gitea

---
kind: Service
apiVersion: v1
metadata:
  name: gitea
  namespace: gitea
spec:
  selector:
    app: gitea
  ports:
    - protocol: TCP
      name: http
      port: 3000
    - protocol: TCP
      name: ssh
      port: 22
---
kind: Service
apiVersion: v1
metadata:
  name: postgres
  namespace: gitea
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: gitea
  namespace: gitea
spec:
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app: gitea
    spec:
      containers:
        - name: gitea
          image: gitea/gitea:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
            - containerPort: 22
          volumeMounts:
            - mountPath: /data
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: gitea-data
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: postgres
  namespace: gitea
spec:
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: postgres-data

---
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: gitea-ingress
  namespace: gitea
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: git.rappet.xyz
      http:
        paths:
          - backend:
              serviceName: gitea
              servicePort: 3000
  tls:
    - hosts:
        - git.rappet.xyz
      secretName: gitea-ingress-cert
