ingress-grafana.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: grafana.rappet.xyz
      http:
        paths:
          - backend:
              serviceName: grafana
              servicePort: 3000
  tls:
    - hosts:
        - grafana.rappet.xyz
      secretName: grafana-ingress-cert
